fix image cropping image too wide

--- a/assets/image_crop.css
+++ b/assets/image_crop.css
@@ -3,6 +3,7 @@
 	position:relative;
 	float:left;
 	max-width: 100%;
+	max-width: calc(100% - 250px);
 	max-height: 100%;
 	/*width: 1000px;
 	height: 700px;*/
